# Sylk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
include/img/: stb_image.h
include/libs/img/: stb_image.h
include/sylk/core/utils/: all.hpp  cast.hpp  log.hpp  rust_style_types.hpp  short_types.hpp
include/sylk/coreutils/: all.hpp  log.hpp  rust_style_types.hpp  typedefs.hpp
include/sylk/data/: color.hpp
include/sylk/opengl/shader/: program.hpp
include/sylk/shader/: program.hpp  shader.hpp
include/sylk/vkutils/: validation.hpp  validation_layers.hpp
include/sylk/vulkan/: vulkan.hpp
include/sylk/vulkan/memory/: buffer.hpp
include/sylk/vulkan/shader/: shader.hpp  uniformbuffer.hpp  vertex.hpp
include/sylk/vulkan/utils/: constants.hpp  queue_family_indices.hpp  result_handler.hpp  validation_layers.hpp
include/sylk/vulkan/window/: graphics_pipeline.hpp  swapchain.hpp  vulkan_window.hpp
include/sylk/window/: window.hpp
libs/glad/: glad.c
libs/img/: stb_image.cpp
scripts/: compile_shaders.sh
shaders/: red.frag  shader.frag  shader.vert  vert.spv
shaders/gl/: blue.frag
shaders/src/: shader.vert
shaders/vk/: vert.spv
shaders/vk/src/: shader.vert
src/: main.cpp  main_gl_bak.cpp
src/opengl/shader/: program.cpp  shader.cpp
src/shader/: program.cpp  shader.cpp
src/vkutils/: result_handler.cpp  validation.cpp  validation_layers.cpp
src/vulkan/memory/: buffer.cpp
src/vulkan/shader/: shader.cpp  uniformbuffer.cpp  vertex.cpp
src/vulkan/utils/: queue_family_indices.cpp  result_handler.cpp  validation_layers.cpp
src/vulkan/window/: graphics_pipeline.cpp  swapchain.cpp  vulkan_window.cpp
src/window/: window.cpp
